--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,70 @@
 .App {
+  overflow: hidden; /*scrolling disabled*/
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.row {
+  width: 100%;
+  height: 100%;
+  padding: 3rem;
+}
+/* Set additional styling options for the columns */
+.column {
+  
+float: left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Set width length for the left, right and middle columns */
+.left {
+  padding-block-start: 3rem;
+  align-self: flex-start;
+  width: 30%;
+}
+
+.right {
+  
+  text-align: left;
+width: 70%;
+}
+
+.row:after {
+content: "";
+display: table;
+clear: both;
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.start
+{
+  justify-self: start;
+  background-image: url("./start.svg");
+  border: 0ch;
+  height: 4rem;
+  width: 12rem;
+  border-radius: 20px;
+  font-size: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.start:hover
+{
+  opacity: 90%;;
+  cursor: pointer;
+}
+
+@media (min-width : 600px)
+{
+  row {
+    font: 16px;
   }
 }
+
