--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-image: url(bg.svg);
+  background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
